# csvql

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  LICENSE.md  README.md  SIMPLE_QUERY_LANGUAGE.md  build.zig  build.zig.zon
.github/workflows/: ci.yml  release.yml
bench/: bench_all.sh  bench_datetime.sh  bench_duckdb.sh  bench_like.sh  bench_output_formats.sh  csv_parse_bench.zig  groupby_bench.zig  verify_correctness.sh
docs/: LIBRARY.md
python/: README.md  pyproject.toml  setup.py
python/csvql/: __init__.py  _loader.py
python/examples/: basic.py  pandas_example.py
src/: aggregation.zig  arena_buffer.zig  bulk_csv.zig  csv.zig  datetime.zig  engine.zig  lib.zig  main.zig  mcp.zig  mmap_engine.zig  options.zig  parallel_mmap.zig  parser.zig  scalar.zig  simd.zig  simple_parser.zig  zigtable.zig
tests/: csv_test.zig  parser_test.zig
